add createFinalState method [doesn't work]